tests/baselines/reference/moduleKeywordRepeatError.errors.txt
tests/cases/compiler/moduleKeywordRepeatError.ts(3,1): error TS2304: Cannot find name 'module'.
tests/cases/compiler/moduleKeywordRepeatError.ts(3,15): error TS1005: ';' expected.


==== tests/cases/compiler/moduleKeywordRepeatError.ts (2 errors) ====
    // "module.module { }" should raise a syntax error
    
    module.module { }
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                  ~
!!! error TS1005: ';' expected.